# cabrital

./: .gitignore  CMakeLists.txt  Cargo.toml  Findspdlog.cmake  LICENSE  README.md  config.toml  meson.build  windows_toolchain.cmake
scripts/: relatorio.py
src/: CMakeLists.txt  cabrito.rs  config.cpp  config.hpp  lib.rs  main.cpp  main.rs  matriz.rs  meson.build  output.rs  rng_logic.rs  simulation.rs
src/logic/: cabrito.hpp  matriz.hpp  rng.cpp  rng.hpp  simulation.cpp  simulation.hpp
