[package]
name = "cabritos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
derive_builder = "0.13.0"
rand = "0.8.5"
rayon = "1.8.1"
serde = "1.0.196"
serde_derive = "1.0.196"
toml = "0.8.8"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"

